wasm/amino_acid_from_fasta_compile.log
emcc: error: /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c: No such file or directory ("/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c" was expected to be an input file, based on the commandline arguments provided)
/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c:6:5: error: second parameter of 'main' (argument array) must be of type 'char **'
    6 | int main(int argc, char argv) {
      |     ^
1 error generated.
emcc: error: '/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/bin/clang -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr --sysroot=/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/sysroot -DEMSCRIPTEN -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/fakesdl -Xclang -iwithsysroot/include/compat -O3 -Wall -ffast-math -DPROGRESS -DLINUX -I/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c -c -o /tmp/emscripten_temp_xq3ts_52/main_wrapper_1.o' failed (returned 1)
cache:INFO: generating system asset: symbol_lists/0bb363dd6dc5ec357155e161bb0918f5970d997b.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/0bb363dd6dc5ec357155e161bb0918f5970d997b.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/05ad88df799c58d586733b27ebdf3664ef24ca83.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/05ad88df799c58d586733b27ebdf3664ef24ca83.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/28784fd2866f4fed62add3ed119eaca7b7b5c81b.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/28784fd2866f4fed62add3ed119eaca7b7b5c81b.json" for subsequent builds)
cache:INFO:  - ok
